# NThreadOSUtils

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
include/: ntosutils.h  ntosutilswin.h
modulerules/: 30_ntosutils.h  ntosutils_rules.h
src/: ntosutils.c  ntosutilswin.c
tests/: CMakeLists.txt  gadgets.c
