cmake_minimum_required(VERSION 3.10)
project(NThreadOSUtils C)

set(NTOSUTILS_MODULE_RULES_DIR ${CMAKE_CURRENT_SOURCE_DIR}/modulerules)
set(NTOSUTILS_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(NTOSUTILS_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

file(GLOB_RECURSE NTOSUTILS_HEADERS CONFIGURE_DEPENDS ${NTOSUTILS_INCLUDE_DIR}/*.h)
file(GLOB_RECURSE NTOSUTILS_SOURCES CONFIGURE_DEPENDS ${NTOSUTILS_SOURCE_DIR}/*.c)

add_library(NThreadOSUtils INTERFACE)

target_include_directories(NThreadOSUtils INTERFACE ${NTOSUTILS_INCLUDE_DIR})
target_include_directories(NThreadOSUtils INTERFACE ${NTOSUTILS_MODULE_RULES_DIR})
target_sources(NThreadOSUtils INTERFACE ${NTOSUTILS_SOURCES})

target_link_libraries(NThreadOSUtils INTERFACE NThread)

